--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <li><a href="~/movies">Movies</a></li>
                 <li><a href="~/tv_shows">TV Shows</a></li>
                 <li><a href="~/documentaries">Documentaries</a></li>
-                <li><a href="~/about">About Us</a></li>
+                <li><a href="~/Home/About">About Us</a></li>
             </ul>
         </nav>
     </header>
