--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -62,11 +62,9 @@
         </section>
  <section class="commit-history">
             <h2>Commit History</h2>
-            <p><li>Here is the total number of commits commited by each person</li></p>
-            <img src="/img/Team_Commits.png" alt="Number of commits by each person">
 
             <p><li>Here are the files updated by each person</li></p>
-            <img src="/img/Individual.png" alt="files updated by each person">
+            <img src="/img/commit.png" alt="files updated by each person">
 
             <br><br><br>
             <br><br><br>
